updated code for html

--- a/index.html
+++ b/index.html
@@ -1,31 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Password Generator</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500&family=Karla:wght@800&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
-    <div id="container">
-      <section id="top-section">
-        <div id="heading">Generate a <span><br>random password</span></div>
-        <div id="description">Never use an insecure password again</div>
-        <button id="button-el" onclick="generatePassword()">Generate password</button>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500&family=Karla:wght@800&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body class="body">
+    <div id="container" class="container-class">
+      <section class="top-section">
+        <div id="heading" class="title">
+          Generate a <span class="special-text"><br />random password</span>
+        </div>
+        <div class="description">Never use an insecure password again</div>
+        <button class="button" id="button-el" onclick="generatePassword()">
+          Generate password
+        </button>
       </section>
-      <section id="bottom-section">
-        <div id="password-one"></div>
-        <div id="password-two"></div>
+      <section class="bottom-section">
+        <div id="password-one" class="pswrd"></div>
+        <div id="password-two" class="pswrd"></div>
       </section>
     </div>
     <script src="index.js"></script>
-
-    
-
-    
-</body>
+  </body>
 </html>
